--- a/paper.tex
+++ b/paper.tex
@@ -182,7 +182,7 @@
 \urlstyle{same} % disable monospaced font for URLs
 \hypersetup{
   pdftitle={A comprehensive literature review of the economics of open source software},
-  pdfauthor={Aaron Lohmann},
+  pdfauthor={aaron-lohmann},
   colorlinks=true,
   linkcolor={NavyBlue},
   filecolor={Maroon},
@@ -196,11 +196,8 @@ directed to:
 \href{aaron.lohmann@uni-bielefeld.de}{aaron.lohmann@uni-bielefeld.de}.}}
 
 
-  \author{Aaron Lohmann}
-            \affil{%
-                  Univeristy Bielefeld \& IfW Kiel
-              }
-      
+  \author{aaron-lohmann}
+  
 \date{2025-03-24}
 \begin{document}
 \maketitle
