--- a/paper.tex
+++ b/paper.tex
@@ -192,7 +192,9 @@
 
 \title{A comprehensive literature review of the economics of open source
 software\thanks{Comments, questions, and feedback are welcome and can be
-directed to:
+submitting as an issue to the repository
+\href{https://github.com/aaron-lohmann/econ-oss/issues}{https://github.com/aaron-lohmann/econ-oss}.
+Alternatively, to:
 \href{aaron.lohmann@uni-bielefeld.de}{aaron.lohmann@uni-bielefeld.de}.}}
 
 
@@ -209,10 +211,15 @@ increased attention from the economic discipline. Some work is motivated
 by the curious incentive structures, the econmic value created through
 OSS or the available and detailed micro-data. The goal for this project
 is to openly and publically craft a literature review which summarises
-our findings about OSS, especially relating to economics. Inspired by
-OSS itself, this project is open to contribution from anyone. Reward in
-the form of co-authorship is given according to contribution.
+our findings about OSS relating to economic ideas. Inspired by OSS
+itself, this project is open to contribution from anyone. Reward in the
+form of co-authorship is given according to contribution (see
+contribution guidelines).
 \end{abstract}
+
+\begin{center}
+\bf{Contributions welcome!}
+\end{center}
 
 Contribution guidelines:
 
@@ -221,20 +228,54 @@ Contribution guidelines:
 \tightlist
 \item
   Contributions to this project must be made through a pull request to
-  the repo https://github.com/aaron-lohmann/econ-oss.
+  the repo \url{https://github.com/aaron-lohmann/econ-oss}.
 \item
-  Position in author listing will be propoertional to the amount of
-  approved pull requests. Ties between the same amount of pull requests
-  will be broken by the earliest contribution of an author.
+  Position in author listing will be determind by the amount of approved
+  pull requests. Ties between the same amount of pull requests will be
+  broken by the earliest contribution of an author.
 \item
-  Co-authorship will be granted upon two approved pull requets.
+  Co-authorship will be granted upon two approved pull requets. One of
+  these contributions must introduce a new citation.
 \end{enumerate}
 
 \newpage
 
 \section{Introduction}\label{sec-introduction}
 
+Open Source Software (OSS) is key to the functioning of the modern
+digital infrastructure. For economists some parts of OSS propose curious
+questions. Why do developers contribute? Can open development outpeform
+closed development? On the other hand, the detailed micro data on
+individuals allows to study questions that are relevant to a number of
+knowledge intensive sectors like patenting, R \& D and the development
+of Work from Home. OSS provides the rare oppurunity to track for a large
+group of workers who works when for how long at what time. Moreover,
+there are questions related to global integration. How do teams form
+across space, how much do teams across collaborate with each other? Yet,
+other another aspect for OSS is the network structure. One example is to
+study the adoption of technology. This review tries to be comprehensive.
+From descriptive papers to published datasets and novel and innovati ve
+insights. In the end, this paper addresses two groups of readers. Those
+that read for knowledge and look for answers and those that read for
+understanding, potentially seeking to enter the field of economics of
+OSS.
+
+\section{Theory}\label{sec-theory}
+
+Theoretical contributions which directly answer questions about OSS.
+
+\section{Datasets}\label{sec-datasets}
+
+What datasets are out there to study OSS? What are benefits of one
+versus the other?
+
 See Schueller et al. (\citeproc{ref-schueller2022}{2022})
+
+\section{The value of OSS}\label{sec-value}
+
+\section{Geographical composition and team formation}\label{sec-teams}
+
+\section{Team outcomes}\label{sec-outcomes}
 
 \section{References}\label{sec-references}
 
