--- a/paper.tex
+++ b/paper.tex
@@ -181,7 +181,7 @@
 \IfFileExists{xurl.sty}{\usepackage{xurl}}{} % add URL line breaks if available
 \urlstyle{same} % disable monospaced font for URLs
 \hypersetup{
-  pdftitle={A comprehensive literature review of the economics of open source software},
+  pdftitle={Open sourcing the economics of open source: A comprehensive literature review},
   pdfauthor={aaron-lohmann},
   colorlinks=true,
   linkcolor={NavyBlue},
@@ -190,9 +190,9 @@
   urlcolor={Blue},
   pdfcreator={LaTeX via pandoc}}
 
-\title{A comprehensive literature review of the economics of open source
-software\thanks{Comments, questions, and feedback are welcome and can be
-submitting as an issue to the repository
+\title{Open sourcing the economics of open source: A comprehensive
+literature review\thanks{Comments, questions, and feedback are welcome
+and can be submitting as an issue to the repository
 \href{https://github.com/aaron-lohmann/econ-oss/issues}{https://github.com/aaron-lohmann/econ-oss}.
 Alternatively, to:
 \href{aaron.lohmann@uni-bielefeld.de}{aaron.lohmann@uni-bielefeld.de}.}}
@@ -200,7 +200,7 @@ Alternatively, to:
 
   \author{aaron-lohmann}
   
-\date{2025-03-24}
+\date{2025-03-25}
 \begin{document}
 \maketitle
 \begin{abstract}
