--- a/paper.tex
+++ b/paper.tex
@@ -275,12 +275,26 @@ See Schueller et al. (\citeproc{ref-schueller2022}{2022})
 
 \section{Geographical composition and team formation}\label{sec-teams}
 
+Goldbeck (\citeproc{ref-goldbeck2025bit}{2025}) concentrats on software
+developers in the U.S. Using the self-reported locations, develoepers
+are matched to 179 economic areas in the U.S. Running gravity-style
+regressions, the author finds sizable colocation effects. However, this
+effect is much smaller than that of traditional inventor networks. For
+developers with joint organizational membership or those collaborting on
+high quality projects, measured by stars, the distance elasticity is
+found to be weaker.
+
 \section{Team outcomes}\label{sec-outcomes}
 
 \section{References}\label{sec-references}
 
 \phantomsection\label{refs}
 \begin{CSLReferences}{1}{0}
+\bibitem[\citeproctext]{ref-goldbeck2025bit}
+Goldbeck, Moritz. 2025. {``Bit by Bit: Colocation and the Death of
+Distance in Software Developer Networks.''} \emph{Journal of Economic
+Geography}, lbaf002.
+
 \bibitem[\citeproctext]{ref-schueller2022}
 Schueller, William, Johannes Wachs, Vito D. P. Servedio, Stefan Thurner,
 and Vittorio Loreto. 2022. {``Evolving Collaboration, Dependencies, and
