--- a/references.bib
+++ b/references.bib
@@ -13,3 +13,11 @@
 	note = {Publisher: Nature Publishing Group},
 	langid = {en}
 }
+@article{goldbeck2025bit,
+  title={Bit by bit: colocation and the death of distance in software developer networks},
+  author={Goldbeck, Moritz},
+  journal={Journal of Economic Geography},
+  pages={lbaf002},
+  year={2025},
+  publisher={Oxford University Press}
+}
