--- a/references.bib
+++ b/references.bib
@@ -21,3 +21,10 @@
   year={2025},
   publisher={Oxford University Press}
 }
+@article{hoffmann2024value,
+  title={The value of open source software},
+  author={Hoffmann, Manuel and Nagle, Frank and Zhou, Yanuo},
+  journal={Harvard Business School Strategy Unit Working Paper},
+  number={24-038},
+  year={2024}
+}
