--- a/paper.tex
+++ b/paper.tex
@@ -200,7 +200,7 @@ Alternatively, to:
 
   \author{aaron-lohmann}
   
-\date{2025-03-27}
+\date{2025-04-02}
 \begin{document}
 \maketitle
 \begin{abstract}
@@ -303,10 +303,25 @@ colocation effect is found to be weaker.
 
 \section{Team outcomes}\label{sec-outcomes}
 
+Betti et al. (\citeproc{ref-betti2024dynamics}{2024}) study team
+dynamics with a special emphasis on leaders. Builiding on the data by
+Schueller et al. (\citeproc{ref-schueller2022}{2022}) they identify
+leaders of projects and reveal that often the workload is highly
+heterogeneous. In teams of \(5\) to \(7\), the leader roughly does
+\(80\) per cent of the commits. More hetereogenous effort distribution
+is correlated with higher success. Finally, they study changes in
+leaderships and reveal that subsequent to a change in leadership the
+success of the project increases.
+
 \section{References}\label{sec-references}
 
 \phantomsection\label{refs}
 \begin{CSLReferences}{1}{0}
+\bibitem[\citeproctext]{ref-betti2024dynamics}
+Betti, Lorenzo, Luca Gallo, Johannes Wachs, and Federico Battiston.
+2024. {``The Dynamics of Leadership and Success in Software Development
+Teams.''} \emph{arXiv Preprint arXiv:2404.18833}.
+
 \bibitem[\citeproctext]{ref-goldbeck2025bit}
 Goldbeck, Moritz. 2025. {``Bit by Bit: Colocation and the Death of
 Distance in Software Developer Networks.''} \emph{Journal of Economic
